# adb

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
libadb/: CMakeLists.txt
libadb/include/libadb/: libadb.hpp
libadb/include/libadb/api/: api.hpp
libadb/include/libadb/api/application/data/: application-flags.hpp  application.hpp  install-params.hpp  membership-state.hpp  team-member.hpp  team.hpp
libadb/include/libadb/api/auth/: auth.hpp  token-bot.hpp
libadb/include/libadb/api/channel/: channel-api.hpp
libadb/include/libadb/api/channel/data/: channel.hpp  (+8 more)
libadb/include/libadb/api/error/: endpoint-error.hpp
libadb/include/libadb/api/gateway/: gateway-events.hpp  gateway-retrive.hpp  gateway.hpp
libadb/include/libadb/api/guild/: guild-api.hpp
libadb/include/libadb/api/interactions/: interaction-helpers.hpp  interactions-api.hpp  interactions.hpp
libadb/include/libadb/api/media/: media-gateway.hpp
libadb/include/libadb/api/permissions/: permissions.hpp  role-tags.hpp  role.hpp
libadb/include/libadb/api/rate/: rate-limiter.hpp  rate-reader.hpp
libadb/include/libadb/api/sticker/: sticker-api.hpp
libadb/include/libadb/api/user/: user-api.hpp
libadb/include/libadb/api/utils/: algorithms.hpp  msg-format.hpp
libadb/include/libadb/api/voice/: gateway.hpp
libadb/include/libadb/cfg/: secrets.hpp
libadb/include/libadb/encoding/: base64.hpp  endian.hpp
libadb/include/libadb/resource/: image-data.hpp  image-format.hpp  image-resolver.hpp  image.hpp  locale.hpp  localization-map.hpp
libadb/include/libadb/types/: chrono.hpp  nullable.hpp  snowflake.hpp  subscription.hpp  time.hpp
libadb/include/libadb/types/helpers/: chrono-helper.hpp  enums.hpp  json-chrono.hpp  json-enum.hpp  json-nullable.hpp  json-optional.hpp  json-sfid-map.hpp  json-variant.hpp
libadb/src/libadb/api/: api.cpp
libadb/src/libadb/api/auth/: auth.cpp  token-bot.cpp  token-bot.hpp
libadb/src/libadb/api/channel/: channel-api.cpp
libadb/src/libadb/api/context/: context.cpp  context.hpp
libadb/src/libadb/api/error/: check-endpoint-error.cpp  check-endpoint-error.hpp  endpoint-error.cpp
libadb/src/libadb/api/gateway/: gateway-controller.cpp  gateway-controller.hpp  gateway-events.cpp  gateway-fsm-details.hpp  gateway-fsm.cpp  gateway-fsm.hpp  gateway-retrive.cpp  gateway.cpp
libadb/src/libadb/api/guild/: guild-api.cpp
libadb/src/libadb/api/interactions/: interactions-api.cpp  interactions.cpp
libadb/src/libadb/api/media/: gateway-data.cpp  gateway-data.hpp  gateway-websocket.cpp  gateway-websocket.hpp  media-gateway.cpp
libadb/src/libadb/api/permissions/: permissions.cpp  role-tags.cpp  role.cpp
libadb/src/libadb/api/rate/: rate-reader.cpp
libadb/src/libadb/api/sticker/: sticker-api.cpp
libadb/src/libadb/api/user/: user-api.cpp
libadb/src/libadb/api/utils/: awaitable-event.cpp  awaitable-event.hpp  fill-reason.cpp  fill-reason.hpp  message-session.cpp  message-session.hpp  misc.cpp  misc.hpp  msg-format.cpp  read-response.cpp  read-response.hpp
libadb/src/libadb/api/voice/: gateway.cpp
libadb/src/libadb/cfg/: secrets.cpp
libadb/src/libadb/encoding/: base64.cpp
libadb/src/libadb/misc/: logging.hpp
libadb/src/libadb/resource/: image-data.cpp  image-fromat.cpp  image-resolver.cpp  image.cpp  locale.cpp  localization-map.cpp
libadb/src/libadb/types/: snowflake.cpp
libadb/src/libadb/types/helpers/: chrono-helper.cpp
src/: CMakeLists.txt  main.cpp
src/api/: api.cpp  api.hpp
src/api/auth/: auth.cpp  auth.hpp  token-bot.cpp  token-bot.hpp
src/api/channel/: channel-api.cpp  channel-api.hpp
src/api/channel/data/: channel-mention.cpp  channel-mention.hpp  channel.cpp  channel.hpp  overwrite.cpp  overwrite.hpp
src/api/emoji/data/: emoji.cpp  emoji.hpp
src/api/gateway/: gateway-events.cpp  gateway-events.hpp  gateway-retrive.cpp  gateway.cpp  gateway.hpp
src/api/gateway/data/: dispatch.hpp  event.cpp  gateway-retrive-data.hpp  hello.cpp  hello.hpp  identity.cpp  identity.hpp  intents.hpp  opcode.hpp  payload.cpp  retrive-query.hpp
src/api/guild/: guild-api.cpp  guild-api.hpp
src/api/guild/data/: guild-member.cpp  guild-member.hpp  guild.hpp
src/api/interactions/: interactions-api.cpp  interactions-api.hpp  interactions.cpp
src/api/interactions/data/: application-command-type.hpp  interaction-data.cpp  interaction-data.hpp  interaction-type.hpp  interaction.cpp  interaction.hpp
src/api/message/data/: allowed-mentions.cpp  allowed-mentions.hpp  attachment.cpp  attachment.hpp  embed.cpp  embed.hpp  message-component.cpp  message-component.hpp  message-flags.hpp  message.cpp  message.hpp  select-option.cpp  select-option.hpp  send-message.cpp  send-message.hpp
src/api/permissions/: permissions.cpp  permissions.hpp  role.cpp  role.hpp
src/api/user/: user-api.cpp  user-api.hpp
src/api/user/data/: user-flags.hpp  user-premium-flag.hpp  user.cpp  user.hpp
src/api/utils/: msg-format.cpp  msg-format.hpp
src/api/voice/: gateway.cpp  gateway.hpp
src/api/voice/data/: hello-event.cpp  hello-event.hpp  ip-discovery.cpp  ip-discovery.hpp  payload.cpp  payload.hpp  ready-event.cpp  ready-event.hpp  select-protocol.cpp  session-description.cpp  speaking.cpp  speaking.hpp  voice-identity.cpp  voice-identity.hpp  voice-packet.hpp  voice-server-update-event.cpp  voice-server-update-event.hpp  voice-state-update.cpp  voice-state-update.hpp  voice-state.cpp  voice-state.hpp
src/cfg/: secrets.cpp  secrets.hpp
src/encoding/: base64.cpp
src/tests/: test-voice.cpp  test-voice.hpp  test1.cpp  test1.hpp
src/types/: color.hpp  snowflake.cpp  snowflake.hpp  time.hpp
src/types/helpers/: chrono-helper.cpp  json-nullable.hpp  json-optional.hpp
src/types/helpers/ranges/: range.hpp
tests/: CMakeLists.txt  main.cpp
tests/cfg/: secrets.cpp  secrets.hpp
tests/tests/: app-commands.cpp  app-commands.hpp  message-deleter.cpp  message-deleter.hpp  test-channel.cpp  test-channel.hpp  test-guild.cpp  test-guild.hpp  test-rate.cpp  test-rate.hpp  test-user.cpp  test-user.hpp  test-voice.cpp  test-voice.hpp  test1.cpp  test1.hpp
(+225 files in other folders)
